--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header class="clearfix">
+    <header class="header">
       <div class="logo">
         <img
           src="https://static.xiedaimala.com/xdml/cdn/assets/white-logo-1a762b425df663fbccee710fe08d66951cea2fbc0a0350f03446ab30462e739f.png"
           alt=""
         />
       </div>
-      <ul class="clearfix nav">
+      <ul>
         <li>首页</li>
         <li>课程</li>
         <li>优惠</li>
@@ -22,22 +22,21 @@
       </ul>
     </header>
 
-    <div class="content clearfix">
-      <div class="aside"></div>
-      <div class="main"></div>
+    <div class="content">
+      <aside>一行6个字</aside>
+      <main></main>
       <div class="ad"></div>
     </div>
 
     <div class="imageList">
-      <div class="x clearfix">
-        <div class="images"></div>
-        <div class="images"></div>
-        <div class="images"></div>
-        <div class="images"></div>
-        <div class="images"></div>
-        <div class="images"></div>
-        <div class="images"></div>
-        <div class="images"></div>
+      <div class="inner">
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
       </div>
     </div>
   </body>
